První stránka kompostárny

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -10,7 +10,7 @@ const navItems = [
 		name: "Služby",
 		href: "#",
 		children: [
-			{ name: "Kompostárna Krhov", href: "/kompostarny-krhov" },
+			{ name: "Kompostárna Krhov", href: "/kompostarna-krhov" },
 			{ name: "Kontejnerová doprava", href: "/kontejnerova-doprava" },
 			{ name: "Výkopové práce", href: "/vykopove-prace" },
 			{ name: "Drcení biomasy", href: "/drcene-biomasy" },
