--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,6 +1,7 @@
 ---
 import Nav from "../components/Nav.astro";
 import Footer from "../components/Footer.astro";
+import { url } from "../utils/urls";
 import "../styles/global.css";
 
 interface Props {
@@ -21,7 +22,7 @@ const {
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href={url("/favicon.svg")} />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
