--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -27,7 +27,7 @@ const {
 		<title>{title}</title>
 	</head>
 	<body class="min-h-screen flex flex-col bg-slate-50">
-		<header>
+		<header class="sticky top-0 z-50">
 			<Nav transparent={transparentNav} />
 		</header>
 
