Stránka Drcení biomasy

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -14,7 +14,7 @@ const navItems = [
 			{ name: "Kompostárna Krhov", href: "/kompostarna-krhov" },
 			{ name: "Kontejnerová doprava", href: "/kontejnerova-doprava" },
 			{ name: "Výkopové práce", href: "/vykopove-prace" },
-			{ name: "Drcení biomasy", href: "/drcene-biomasy" },
+			{ name: "Drcení biomasy", href: "/drceni-biomasy" },
 		],
 	},
 	{ name: "O nás", href: "/o-nas" },
